--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,55 @@
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+span {
+  margin: 0;
+  padding: 0;
+}
+
+.heading {
+  text-align: center;
+  padding: 10px 0;
+}
+
 .filter_row {
   display: flex;
   column-gap: 20px;
+}
+
+.infinite-scroll-component {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.job_card_container {
+  width: calc(90% / 3);
+  border: 1px solid gray;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 2px 10px 0 gray;
+  margin-bottom: 10px;
+}
+
+.job_card_header {
+  display: flex;
+}
+
+.job_card_header img {
+  width: 80px;
+  height: 80px;
+  margin-right: 20px;
+  margin-bottom: 20px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mt-20 {
+  margin-top: 20px;
 }
